Bug 50361 - Fix some introspection information
Summary: Fix some introspection information
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: logger (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-25 11:42 UTC by Jasper St. Pierre
Modified: 2012-05-28 05:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix introspection warnings (9.12 KB, patch)
2012-05-25 11:42 UTC, Jasper St. Pierre
Details | Splinter Review
log-manager: Fix annotations on get_filtered_events (1.34 KB, patch)
2012-05-25 11:42 UTC, Jasper St. Pierre
Details | Splinter Review
Update .gitignore (881 bytes, patch)
2012-05-25 11:42 UTC, Jasper St. Pierre
Details | Splinter Review

Description Jasper St. Pierre 2012-05-25 11:42:07 UTC
See patches.
Comment 1 Jasper St. Pierre 2012-05-25 11:42:09 UTC
Created attachment 62106 [details] [review]
Fix introspection warnings
Comment 2 Jasper St. Pierre 2012-05-25 11:42:12 UTC
Created attachment 62107 [details] [review]
log-manager: Fix annotations on get_filtered_events

Both callbacks needs to be marked allow-none, and filter isn't an
(async scope), it's an (async call).
Comment 3 Jasper St. Pierre 2012-05-25 11:42:15 UTC
Created attachment 62108 [details] [review]
Update .gitignore
Comment 4 Jonny Lamb 2012-05-28 05:59:29 UTC
Looks fine, I pushed these three patches.

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.