Fix introspection warnings

https://bugs.freedesktop.org/show_bug.cgi?id=50361

Signed-off-by: Jonny Lamb <jonny.lamb@collabora.co.uk>