telepathy-logger/call-channel.c
@@ -465,7 +465,7 @@ _tpl_call_channel_init (TplCallChannel *self)
 
 
 /**
- * _tpl_call_channel_new
+ * _tpl_call_channel_new:
  * @conn: TpConnection instance owning the channel
  * @object_path: the channel's DBus path
  * @tp_chan_props: channel's immutable properties, obtained for example by
